# behavtaskatlas

./: .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  INSIGHTS.md  LICENSE  MVP_PLAN.md  README.md  UI.md  package.json  pyproject.toml  vercel.json
.github/: pull_request_template.md
analyses/: README.md  allen_visual_behavior_neuropixels.yaml  auditory_clicks.yaml  coen_audiovisual_decisions.yaml  fritsche_temporal_regularities.yaml  human_auditory_clicks.yaml  human_random_dot_motion.yaml  human_visual_contrast.yaml  ibl_brainwide_map.yaml  ibl_visual_decision.yaml  macaque_rdm_confidence.yaml  mouse_visual_contrast_unbiased.yaml  odoemene_visual_accumulation.yaml  random_dot_motion.yaml  rodgers_whisker_object_recognition.yaml  steinmetz_visual_decision.yaml  visual_2afc_contrast_family.yaml  zatka_haas_visual_decision.yaml
comparisons/: drift-across-species.yaml  ibl-prior-blocks.yaml  macaque-vs-human-rdm.yaml  rat-vs-human-clicks.yaml  rdm-chronometric-species.yaml  walsh-bias-locus.yaml  walsh-prior-cue.yaml
data_requests/: burgess-2017-visual-psychophysics-source-data.yaml  busse-2011-visual-contrast-port-trials.yaml  khalvati-kiani-rao-2021-raw-behavior-matlab.yaml  lak-2020-visual-contrast-wheel-source-data.yaml  pho-2018-visual-contrast-gonogo-source-data.yaml
datasets/: allen-brain-observatory-visual-behavior.yaml  allen-visual-behavior-neuropixels.yaml  brody-lab-poisson-clicks-2009-2024.yaml  coen-audiovisual-decisions-ucl.yaml  fritsche-temporal-regularities-figshare.yaml  ibl-brainwide-map-2025.yaml  (+10 more)
(+618 files in other folders)
